SLING-12000 Update to sling-bundle-parent 52, switch to Java 11 also get rid of guava testing dependencies